| Summary: | ASTERISK-25129: wrong automatic ras address assignment if multihomed | ||
| Reporter: | Dmitry Melekhov (slesru) | Labels: | patch |
| Date Opened: | 2015-05-25 04:03:14 | Date Closed: | 2018-04-26 11:43:55 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_ooh323 |
| Versions: | 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Centos 6 x86-64 | Attachments: | ( 0) localrasip.patch ( 1) rasip.patch ( 2) rasip-13.20.0.patch |
| Description: | If bindaddr=0.0.0.0 then chan_ooh323 assigns first available address as ras address.
I already contacted maintaner, and best solution here can be using of routing table to find most suitable address, but such solution is too hard for me to implement. My patch introduces locaras parameter, which can be set in config. Hope this can be useful for somebody else. Thank you! | ||
| Comments: | By: Rusty Newton (rnewton) 2015-05-28 19:16:35.104-0500 Assigning to Alexander for triage. Alexander is this an option you want to push in? By: Alexander Anikin (may213) 2015-06-09 13:12:11.659-0500 Yes, this option will useful. Dmitry do it in right way but it need to add correct 0.0.0.0 processing. I will do patch for that. By: Rusty Newton (rnewton) 2015-06-10 07:45:21.152-0500 Sounds good, thanks! By: Dmitry Melekhov (slesru) 2017-07-18 01:51:06.868-0500 Hello! We use this patch for years now, it is stable. Is it possible to include it in next asterisk version? Thank you! By: Dmitry Melekhov (slesru) 2018-04-01 06:36:00.129-0500 Hello! Had to do trivial update to apply patch to 13.20. Attached. Thank you! Still not in mainline :-( By: Alexander Anikin (may213) 2018-04-16 15:57:17.161-0500 Hi Dmitry, Uploaded few simplified patch. Could you please test it and if will ok we will push it to origin. By: Dmitry Melekhov (slesru) 2018-04-18 01:55:15.460-0500 Hello! Patched 13.20.0 , works perfectly. Thank you! By: Alexander Anikin (may213) 2018-04-18 05:47:00.154-0500 Hi Dmitry, Thank you, i will commit and close the issue. By: Friendly Automation (friendly-automation) 2018-04-26 11:43:56.843-0500 Change 8812 merged by Jenkins2: chan_ooh323: introduce localras config parameter [https://gerrit.asterisk.org/8812|https://gerrit.asterisk.org/8812] | ||